--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
         <!-- NAVBAR -->
         <div class="Navbar-Container" id="Navbar-Container">
             <div class="logo">
-                <h1>DreamLand</h1>
+                <h1>HELLO DIO</h1>
             </div>
             <div class="Navlink">
                 <ul class="NavMenu">
