--- a/public/index.html
+++ b/public/index.html
@@ -25,7 +25,7 @@
             </div>
             <div class="Navlink">
                 <ul class="NavMenu">
-                    <li class="linkItem"><a href="#">review</a></li>
+                    <li class="linkItem"><a href="#">Review</a></li>
                     <li class="linkItem"><a href="#">Destination</a></li>
                     <li class="linkItem"><a href="#">Feedbacks</a></li>
                 </ul>
