--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,8 @@
                     <li class="linkItem"><a href="#">Review</a></li>
                     <li class="linkItem"><a href="#">Destination</a></li>
                     <li class="linkItem"><a href="#">Feedbacks</a></li>
+                    <li class="linkItem off"><a href="#">Search</a></li>
+                    <li class="linkItem off"><a href="#">Profile</a></li>
                 </ul>
             </div>
             <div class="hamburger">
