--- a/public/index.html
+++ b/public/index.html
@@ -51,11 +51,15 @@
                         Beauty of Ind<span>one</span>sia</h1>
                 </div>
                 <div class="subHeading">
-                    Discover the beauty of Indonesia coincide with Indonesia independence day,
+                    Discover the beauty of Indonesia coincide with Indonesia independence day,<br>
                     you will feel the unforgettable experience of Indonesia.
                 </div>
                 <div class="iconInfo">
+                    <div class="info"><img src="/assets/monument.png"><p><span>5,000+</span> <br> Local Tradisional Food</p></div>
+                    <div class="info"><img src="/assets/monument.svg"><p><span>20+</span> <br> Unique Monument</p></div>
+                    <div class="info"><img src="/assets/monument (1).png"><p><span>3,000+</span> <br> Tourist Attractions</p></div>
 
+                    
                 </div>
             </div>
             <div class="right">
