--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="../style/index.css">
     <link rel="stylesheet" href="../style/navbar.css">
     <link rel="stylesheet" href="../style/hero.css">
+    <link rel="stylesheet" href="../style/whychoose.css">
     <!-- STYLE -->
     <!-- SCRIPT -->
 
@@ -51,15 +52,11 @@
                         Beauty of Ind<span>one</span>sia</h1>
                 </div>
                 <div class="subHeading">
-                    Discover the beauty of Indonesia coincide with Indonesia independence day,<br>
+                    Discover the beauty of Indonesia coincide with Indonesia independence day,
                     you will feel the unforgettable experience of Indonesia.
                 </div>
                 <div class="iconInfo">
-                    <div class="info"><img src="/assets/monument.png"><p><span>5,000+</span> <br> Local Tradisional Food</p></div>
-                    <div class="info"><img src="/assets/monument.svg"><p><span>20+</span> <br> Unique Monument</p></div>
-                    <div class="info"><img src="/assets/monument (1).png"><p><span>3,000+</span> <br> Tourist Attractions</p></div>
 
-                    
                 </div>
             </div>
             <div class="right">
@@ -68,9 +65,23 @@
         </div>
         <!-- HERO SECTION -->
 
-
-
-
+        <!-- WHY CHOOSE DREAMLAND -->
+        <div class="whychoose-container">
+            <div class="whychoose-content">
+                <img src="/assets//illu-sapiens1.svg" alt="gambar">
+                <div class="text">
+                    <h1>
+                        Why Choose Dreamland?
+                    </h1>
+                    <p>
+                        Indonesia has a lot of natural resources that can be utilized and preserved, especially as a
+                        place for local and foreign tourists to visit. We can facilitate you by taking you to places
+                        that are hidden gems and giving you an experience that will not disappoint.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- WHY CHOOSE  -->
 
 
 
