--- a/public/index.html
+++ b/public/index.html
@@ -71,7 +71,7 @@
                 <img src="/assets//illu-sapiens1.svg" alt="gambar">
                 <div class="text">
                     <h1>
-                        Why Choose Dreamland?
+                        Why Choose Dreamland?dwadadawdw
                     </h1>
                     <p>
                         Indonesia has a lot of natural resources that can be utilized and preserved, especially as a
