--- a/public/index.html
+++ b/public/index.html
@@ -56,6 +56,9 @@
                     you will feel the unforgettable experience of Indonesia.
                 </div>
                 <div class="iconInfo">
+                    <div class="info"><img src="/assets/monument.png"><p><span>5,000+</span> <br> Local Tradisional Food</p></div>
+                    <div class="info"><img src="/assets/monument.svg"><p><span>20+</span> <br> Unique Monument</p></div>
+                    <div class="info"><img src="/assets/monument (1).png"><p><span>3,000+</span> <br> Tourist Attractions</p></div>
 
                 </div>
             </div>
