--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="../style/navbar.css">
     <link rel="stylesheet" href="../style/hero.css">
     <link rel="stylesheet" href="../style/whychoose.css">
+    <link rel="stylesheet" href="../style//readingpost.css">
     <!-- STYLE -->
     <!-- SCRIPT -->
 
@@ -56,9 +57,15 @@
                     you will feel the unforgettable experience of Indonesia.
                 </div>
                 <div class="iconInfo">
-                    <div class="info"><img src="/assets/monument.png"><p><span>5,000+</span> <br> Local Tradisional Food</p></div>
-                    <div class="info"><img src="/assets/monument.svg"><p><span>20+</span> <br> Unique Monument</p></div>
-                    <div class="info"><img src="/assets/monument (1).png"><p><span>3,000+</span> <br> Tourist Attractions</p></div> 
+                    <div class="info"><img src="/assets/monument.png">
+                        <p><span>5,000+</span> <br> Local Tradisional Food</p>
+                    </div>
+                    <div class="info"><img src="/assets/monument.svg">
+                        <p><span>20+</span> <br> Unique Monument</p>
+                    </div>
+                    <div class="info"><img src="/assets/monument (1).png">
+                        <p><span>3,000+</span> <br> Tourist Attractions</p>
+                    </div>
 
                 </div>
                 <div class="tombol">
@@ -89,7 +96,53 @@
             </div>
         </div>
         <!-- WHY CHOOSE  -->
+        <div class="ReadingPost-Container">
+            <div class="Card-Container">
+                <div class="cardhiji">
+                    <img src="../assets/image_ntt.png" alt="">
+                    <div class="contentreading">
+                        <div class="title">
+                            <h3>Pulau Komodo</h3>
+                        </div>
+                        <div class="location">
+                            <img src="../assets/pin 1.svg" alt="">
+                            <p>Nusa Tenggara Timur, Indonesia</p>
+                        </div>
+                        <div class="details">
+                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepualauan Nusa Tenggara, berada di
+                                sebelah
+                                timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
+                        </div>
+                        <div class="button-cardhiji">
+                            <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+                <div class="cardhiji">
+                    <img src="../assets/image_ntt.png" alt="">
+                    <div class="contentreading">
+                        <div class="title">
+                            <h3>Raja Ampat</h3>
+                        </div>
+                        <div class="location">
+                            <img src="../assets/pin 1.svg" alt="">
+                            <p>Papua Barat, Indonesia</p>
+                        </div>
+                        <div class="details">
+                            <p>Kabupaten Raja Ampat adalah salah satu kabupaten di provinsi Papua Barat, Indonesia.
+                                Ibukota kabupaten ini terletak di Waisai. Memiliki 610 pulau, termasuk Raja Ampat.</p>
+                        </div>
+                        <div class="button-cardhiji">
+                            <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
 
+
+
+
+            </div>
+        </div>
 
 
 
