--- a/public/index.html
+++ b/public/index.html
@@ -11,11 +11,10 @@
     <link rel="stylesheet" href="../style/navbar.css">
     <link rel="stylesheet" href="../style/hero.css">
     <link rel="stylesheet" href="../style/whychoose.css">
-<<<<<<< Updated upstream
     <link rel="stylesheet" href="../style//readingpost.css">
-=======
     <link rel="stylesheet" href="../style/content.css">
->>>>>>> Stashed changes
+    <link rel="stylesheet" href="../style//readingpost2.css">
+    <link rel="stylesheet" href="../style//footer.css">
     <!-- STYLE -->
     <!-- SCRIPT -->
 
@@ -50,7 +49,7 @@
         </div>
         <!-- NAVBAR -->
         <!-- HERO SECTION -->
-        <div class="Hero-Container">
+        <!-- <div class="Hero-Container">
             <div class="left">
                 <div class="heading">
                     <h1>Explore the <br />
@@ -80,8 +79,8 @@
             <div class="right">
                 <h4>vertical slider</h4>
             </div>
-        </div>
-        <div class="content">
+        </div> -->
+        <!-- <div class="content">
             <div class="card-container">
                 <div class="card" style="background-image: url(/assets/GWK.png);">
                     <p><b>Garuda Wisnu Kencana</b><br>Badung Regency, Bali</p>
@@ -95,9 +94,9 @@
                 <div class="card" style="background-image: url(/assets/Bromo.png);">
                     <p><b>Mount Bromo</b><br>Pasuruan Regency, East Java</p>
                 </div>
-                
+
             </div>
-        </div>
+        </div> -->
         <!-- HERO SECTION -->
         <!-- WHY CHOOSE DREAMLAND -->
         <div class="whychoose-container">
@@ -116,8 +115,14 @@
             </div>
         </div>
         <!-- WHY CHOOSE  -->
+        <!-- READINGPOST -->
         <div class="ReadingPost-Container">
-            <div class="Card-Container">
+            <div class="Judul">
+                <h1>Reading Post</h1>
+            </div>
+
+
+            <!-- <div class="Card-Container">
                 <div class="cardhiji">
                     <img src="../assets/image_ntt.png" alt="">
                     <div class="contentreading">
@@ -138,6 +143,55 @@
                         </div>
                     </div>
                 </div>
+                <div>
+                </div>
+                <div class="cardhiji">
+                    <img src="../assets/image_ntt.png" alt="">
+                    <div class="contentreading">
+                        <div class="title">
+                            <h3>Raja Ampat</h3>
+                        </div>
+                        <div class="location">
+                            <img src="../assets/pin 1.svg" alt="">
+                            <p>Papua Barat, Indonesia</p>
+                        </div>
+                        <div class="details">
+                            <p>Kabupaten Raja Ampat adalah salah satu kabupaten di provinsi Papua Barat, Indonesia.
+                                Ibukota kabupaten ini terletak di Waisai. Memiliki 610 pulau, termasuk Raja Ampat.</p>
+                        </div>
+                        <div class="button-cardhiji">
+                            <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
+                        </div>
+                    </div>
+                </div> -->
+
+
+            <div class="Card-Container">
+                <div class="cardhiji">
+                    <div class="thumbnail">
+                        <img src="../assets/image_ntt.png" alt="">
+                    </div>
+                    <div class="contentreading">
+
+                        <div class="title">
+                            <h3>Pulau Komodo</h3>
+                        </div>
+                        <div class="location">
+                            <img src="../assets/pin 1.svg" alt="">
+                            <p>Nusa Tenggara Timur, Indonesia</p>
+                        </div>
+                        <div class="details">
+                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepualauan Nusa Tenggara, berada di
+                                sebelah
+                                timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
+                        </div>
+                        <div class="button-cardhiji">
+                            <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="cardhiji">
                     <img src="../assets/image_ntt.png" alt="">
                     <div class="contentreading">
@@ -157,13 +211,64 @@
                         </div>
                     </div>
                 </div>
-
-
-
-
             </div>
+
+
+
+
+
+
+
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
+
+
+    <!-- READINGPOST -->
+    <div class="Footer-Container">
+        <div>
+            <img src='' alt="" />
+        </div>
+        <div class='Quick-Link'>
+            <ul>
+                Quick Link
+                <li><a href=""></a>Abous Us</li>
+                <li><a href=""></a>Partnership</li>
+                <li><a href=""></a>Events</li>
+            </ul>
+        </div>
+        <div class='Fitur'>
+            <ul>
+                Fitur
+                <li><a href=""></a>Afas Career</li>
+                <li><a href=""></a>Afas Olympiad</li>
+                <li><a href=""></a>Afas Entrance</li>
+            </ul>
+        </div>
+        <div class='Social'>
+            <h1>social icons disini</h1>
         </div>
 
+
+
+
+    </div>
+    <div className='text-center border-t-2 border-[#F26924] py-3'>
+        <h1>© Copyright Afaslearn 2022, All Rights Reserved</h1>
+    </div>
+
+
+
+
+    </div>
 
 
 
