--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,6 @@
     <link rel="stylesheet" href="../style/navbar.css">
     <link rel="stylesheet" href="../style/hero.css">
     <link rel="stylesheet" href="../style/whychoose.css">
-    <link rel="stylesheet" href="../style//readingpost.css">
     <link rel="stylesheet" href="../style/content.css">
     <link rel="stylesheet" href="../style//readingpost2.css">
     <link rel="stylesheet" href="../style//footer.css">
@@ -80,7 +79,7 @@
                 <div class="slideshow-container">
 
                     <!-- Full-width images with number and caption text -->
-                    <div class="mySlides">
+        <!-- <div class="mySlides">
                         <div style="border-radius: 32px;height: 380px; width: 380px; background:url(/assets/borobudur.png);">
                             
                         </div>
@@ -140,50 +139,6 @@
             </div>
 
 
-            <!-- <div class="Card-Container">
-                <div class="cardhiji">
-                    <img src="../assets/image_ntt.png" alt="">
-                    <div class="contentreading">
-                        <div class="title">
-                            <h3>Pulau Komodo</h3>
-                        </div>
-                        <div class="location">
-                            <img src="../assets/pin 1.svg" alt="">
-                            <p>Nusa Tenggara Timur, Indonesia</p>
-                        </div>
-                        <div class="details">
-                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepualauan Nusa Tenggara, berada di
-                                sebelah
-                                timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
-                        </div>
-                        <div class="button-cardhiji">
-                            <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
-                        </div>
-                    </div>
-                </div>
-                <div>
-                </div>
-                <div class="cardhiji">
-                    <img src="../assets/image_ntt.png" alt="">
-                    <div class="contentreading">
-                        <div class="title">
-                            <h3>Raja Ampat</h3>
-                        </div>
-                        <div class="location">
-                            <img src="../assets/pin 1.svg" alt="">
-                            <p>Papua Barat, Indonesia</p>
-                        </div>
-                        <div class="details">
-                            <p>Kabupaten Raja Ampat adalah salah satu kabupaten di provinsi Papua Barat, Indonesia.
-                                Ibukota kabupaten ini terletak di Waisai. Memiliki 610 pulau, termasuk Raja Ampat.</p>
-                        </div>
-                        <div class="button-cardhiji">
-                            <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
-                        </div>
-                    </div>
-                </div> -->
-
-
             <div class="Card-Container">
                 <div class="cardhiji">
                     <div class="thumbnail">
@@ -209,26 +164,31 @@
                     </div>
                 </div>
 
-
                 <div class="cardhiji">
-                    <img src="../assets/image_ntt.png" alt="">
+                    <div class="thumbnail">
+                        <img src="../assets/image_ntt.png" alt="">
+                    </div>
                     <div class="contentreading">
+
                         <div class="title">
-                            <h3>Raja Ampat</h3>
+                            <h3>Pulau Komodo</h3>
                         </div>
                         <div class="location">
                             <img src="../assets/pin 1.svg" alt="">
-                            <p>Papua Barat, Indonesia</p>
+                            <p>Nusa Tenggara Timur, Indonesia</p>
                         </div>
                         <div class="details">
-                            <p>Kabupaten Raja Ampat adalah salah satu kabupaten di provinsi Papua Barat, Indonesia.
-                                Ibukota kabupaten ini terletak di Waisai. Memiliki 610 pulau, termasuk Raja Ampat.</p>
+                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepualauan Nusa Tenggara, berada di
+                                sebelah
+                                timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
                         </div>
                         <div class="button-cardhiji">
                             <a href="#">Explore <img src="../assets/Vector (2).png" alt=""></a>
                         </div>
                     </div>
                 </div>
+
+
             </div>
 
 
@@ -238,7 +198,55 @@
 
 
 
+
         </div>
+
+
+
+
+
+
+
+
+
+
+
+        <!-- READINGPOST -->
+        <div class="Footer-Container">
+            <div>
+                <img src='' alt="" />
+            </div>
+            <div class='Quick-Link'>
+                <ul>
+                    Quick Link
+                    <li><a href=""></a>Abous Us</li>
+                    <li><a href=""></a>Partnership</li>
+                    <li><a href=""></a>Events</li>
+                </ul>
+            </div>
+            <div class='Fitur'>
+                <ul>
+                    Fitur
+                    <li><a href=""></a>Afas Career</li>
+                    <li><a href=""></a>Afas Olympiad</li>
+                    <li><a href=""></a>Afas Entrance</li>
+                </ul>
+            </div>
+            <div class='Social'>
+                <h1>social icons disini</h1>
+            </div>
+
+
+
+
+        </div>
+        <div className='text-center border-t-2 border-[#F26924] py-3'>
+            <h1>© Copyright Afaslearn 2022, All Rights Reserved</h1>
+        </div>
+
+
+
+
     </div>
 
 
@@ -246,55 +254,9 @@
 
 
 
-
-
-
-
-    <!-- READINGPOST -->
-    <div class="Footer-Container">
-        <div>
-            <img src='' alt="" />
-        </div>
-        <div class='Quick-Link'>
-            <ul>
-                Quick Link
-                <li><a href=""></a>Abous Us</li>
-                <li><a href=""></a>Partnership</li>
-                <li><a href=""></a>Events</li>
-            </ul>
-        </div>
-        <div class='Fitur'>
-            <ul>
-                Fitur
-                <li><a href=""></a>Afas Career</li>
-                <li><a href=""></a>Afas Olympiad</li>
-                <li><a href=""></a>Afas Entrance</li>
-            </ul>
-        </div>
-        <div class='Social'>
-            <h1>social icons disini</h1>
-        </div>
-
-
-
-
     </div>
-    <div className='text-center border-t-2 border-[#F26924] py-3'>
-        <h1>© Copyright Afaslearn 2022, All Rights Reserved</h1>
     </div>
 
-
-
-
-    </div>
-
-
-
-
-
-
-
-    </div>
     <!-- script -->
     <script src="./script.js"></script>
     <!-- script -->
