--- a/public/index.html
+++ b/public/index.html
@@ -154,7 +154,7 @@
                             <p>Nusa Tenggara Timur, Indonesia</p>
                         </div>
                         <div class="details">
-                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepualauan Nusa Tenggara, berada di
+                            <p>Pulau Komodo adalah sebuah pulau yang terletak di Kepulauan Nusa Tenggara, berada di
                                 sebelah
                                 timur Pulau Sumbawa. Dikenal juga sebagai habitat asli hewan komodo.</p>
                         </div>
