--- a/public/index.html
+++ b/public/index.html
@@ -136,7 +136,7 @@
         <div class="ReadingPost-Container">
             <div class="Judul">
                 <h1>Reading Post</h1>
-                <p><a href="">Discover More</a> <img src="../assets/arrow.svg" alt=""></p>
+                <p><a href="detail.html">Discover More</a> <img src="../assets/arrow.svg" alt=""></p>
             </div>
             <div class="Card-Container">
                 <div class="cardhiji">
@@ -163,7 +163,7 @@
                 </div>
                 <div class="cardhiji">
                     <div class="thumbnail">
-                        <img src="../assets/image_ntt.png" alt="">
+                        <img src="../assets/image_ntt (1).png" alt="">
                     </div>
                     <div class="contentreading">
                         <div class="title">
@@ -197,6 +197,7 @@
 
 
         <!-- READINGPOST -->
+        <!-- FOOTER -->
         <div class="Footer-Border">
             <div class="Footer-Container">
                 <div>
@@ -235,7 +236,7 @@
                 <h3>Copyright Ⓒ 2022 Bocil Kehidupan Corp. All Rights Reserved</h3>
             </div>
         </div>
-
+<!-- FOOTER -->
 
 
 
