12jam lagi gaiss

--- a/public/detail.html
+++ b/public/detail.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/style/footer.css">
     <link rel="stylesheet" href="/style/index.css">
     <link rel="stylesheet" href="/style/article.css">
+    <link rel="stylesheet" href="/style/Dropdown.css">
 </head>
 
 <body>
@@ -43,9 +44,9 @@
         <a href="./index.html">Back to Main Page</a>
     </div>
     <div class="Article-Container">
-        
-            <img src="/assets/GunungBromo.png" alt="">
-        
+
+        <img src="/assets/GunungBromo.png" alt="">
+
         <div class="Judul">
             <div class="Heading">
                 <h1>Pesona Gunung Bromo</h1>
@@ -60,29 +61,44 @@
                 jelas. Sejujurnya, keindahan Gunung Bromo tidak mudah untuk saya tuliskan dengan kata-kata. Karena mata
                 saya saja sampai tak berkedip melihat pesonanya. Sangat indah! Sekilas seperti lukisan yang biasa saya
                 temui.
-                <br/>
-                <br/>
+                <br />
+                <br />
                 Indahnya Gunung Bromo di pagi hari, dengan udara yang sejuk dan angin yang berhembus langsung membawa
                 kami pada titik ternyaman dalam hidup. Jika dari kecil hanya bisa melihat Gunung Bromo dari layar
                 televisi atau gambar di internet, saat ini saya melihatnya secara langsung dengan mata kepala. Memang
                 benar, pesona Gunung Bromo tak lekang oleh waktu.
-                <br/>
-                <br/>
+                <br />
+                <br />
                 Saya merasa beruntung bisa berkunjung ke tempat wisata yang luar biasa ini, dan jika ada kesempatan
-                lain. Saya belum bosan untuk datang lagi ke sana.<br/>
+                lain. Saya belum bosan untuk datang lagi ke sana.<br />
             </p>
         </div>
-
-
-
-
-
-
-
-
     </div>
     <!-- ARTICLE -->
+    <!-- DROPDOWN -->
+    <div class="Dropdown-Container">
+        <button class="accordion">
+            <div class="Circle"><img src="/assets/arrowdown.svg" alt=""></div>
+            Tentang Gunung Bromo
+        </button>
+        <div class="panel">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, assumenda quaerat sequi sed voluptates
+                vero tempore atque! Beatae sequi sunt facere consequuntur voluptas? Amet, mollitia unde. Cum odit omnis
+                id!</p>
+        </div>
 
+        <button class="accordion">Di Mana Letak Gunung Bromo</button>
+        <div class="panel">
+            <p>Gunung Bromo adalah gunung api aktif yang terletak di perbatasan kabupaten Lumajang, Malang, Pasuruan dan Probolinggo.</p>
+            <img src="/assets/LetakBromo.png" alt="">
+        </div>
+
+        <button class="accordion">Harga Masuk Gunung Bromo</button>
+        <div class="panel">
+            <p>Lorem ipsum...</p>
+        </div>
+    </div>
+    <!-- DROPDOWN -->
 
 
 
