baca bismillah dlu yo

--- a/public/index.html
+++ b/public/index.html
@@ -145,7 +145,7 @@
                     </div>
                     <div class="contentreading">
                         <div class="title">
-                            <h3>Pulau Komodo</h3>
+                            <h3>Pulau Komodoo</h3>
                         </div>
                         <div class="location">
                             <img src="../assets/pin 1.svg" alt="">
