--- a/public/detail.html
+++ b/public/detail.html
@@ -77,23 +77,33 @@
     <!-- ARTICLE -->
     <!-- DROPDOWN -->
     <div class="Dropdown-Container">
+        <div class="border">
+            <button class="accordion">
+                <div class="Circle"><img src="/assets/arrowdown.svg" alt=""></div>
+                Tentang Gunung Bromo
+            </button>
+            <div class="panel">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, assumenda quaerat sequi sed
+                    voluptates
+                    vero tempore atque! Beatae sequi sunt facere consequuntur voluptas? Amet, mollitia unde. Cum odit
+                    omnis
+                    id!</p>
+            </div>
+        </div>
+        <div class="border">
+            <button class="accordion">
+                <div class="Circle"><img src="/assets/arrowdown.svg" alt=""></div>Di Mana Letak Gunung Bromo
+            </button>
+            <div class="panel">
+                <p>Gunung Bromo adalah gunung api aktif yang terletak di perbatasan kabupaten Lumajang, Malang, Pasuruan
+                    dan
+                    Probolinggo.</p>
+                <img src="/assets/LetakBromo.png" alt="">
+            </div>
+        </div>
         <button class="accordion">
-            <div class="Circle"><img src="/assets/arrowdown.svg" alt=""></div>
-            Tentang Gunung Bromo
+            <div class="Circle"><img src="/assets/arrowdown.svg" alt=""></div>Harga Masuk Gunung Bromo
         </button>
-        <div class="panel">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, assumenda quaerat sequi sed voluptates
-                vero tempore atque! Beatae sequi sunt facere consequuntur voluptas? Amet, mollitia unde. Cum odit omnis
-                id!</p>
-        </div>
-
-        <button class="accordion">Di Mana Letak Gunung Bromo</button>
-        <div class="panel">
-            <p>Gunung Bromo adalah gunung api aktif yang terletak di perbatasan kabupaten Lumajang, Malang, Pasuruan dan Probolinggo.</p>
-            <img src="/assets/LetakBromo.png" alt="">
-        </div>
-
-        <button class="accordion">Harga Masuk Gunung Bromo</button>
         <div class="panel">
             <p>Lorem ipsum...</p>
         </div>
