--- a/public/bookPage.html
+++ b/public/bookPage.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,7 +9,10 @@
     <link rel="stylesheet" href="/style/navbar.css">
     <link rel="stylesheet" href="/style/footer.css">
     <link rel="stylesheet" href="/style/index.css">
+    <link rel="stylesheet" href="/style/article.css">
+    <link rel="stylesheet" href="/style/search.css">
 </head>
+
 <body>
     <!-- NAVBAR -->
     <div class="Navbar-Container" id="Navbar-Container">
@@ -37,6 +41,93 @@
         </div>
     </div>
     <!-- NAVBAR -->
+    <!-- back -->
+    <div class="Back">
+        <a href="./index.html">Back to Main Page</a>
+    </div>
+    <!-- back -->
+    <div class="Search-Container">
+        <div class="Heading">
+            <h1>5 search results found</h1>
+            <p>Hey, great news! We found your search result just for you.</p>
+        </div>
+        <div class="SearchBar">
+            <input type="text" placeholder="Another destination...">
+        </div>
+    </div>
+
+
+
+
+    <div class="Dropdown-Container">
+        <div class="Search-Dropdown">
+            <button class="accordion">
+                <div class="accordion-flex">
+                    <img src="/assets/emojiLope.png" alt="">
+
+                    <div class="Content">
+                        <h1>10:25 PM - 4:25 PM</h1>
+                        <h3>Thursday • 27 hr • LAX - DPS</h3>
+                        <h3>IDR 19,185,548</h3>
+                    </div>
+                </div>
+                <div class="Circle">
+                    <img src="/assets/arrowdown.svg" alt="">
+                </div>
+            </button>
+            <div class="panel">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, laudantium.</p>
+
+            </div>
+            <button class="accordion">
+                <div class="accordion-flex">
+                    <img src="/assets/emojiLope.png" alt="">
+
+                    <div class="Content">
+                        <h1>1:30 PM - 10:10 AM</h1>
+                        <h3>Thursday • 29 hr 40 min • LAX - DPS</h3>
+                        <h3>17,393,955</h3>
+                    </div>
+                </div>
+                <div class="Circle">
+                    <img src="/assets/arrowdown.svg" alt="">
+                </div>
+            </button>
+            <div class="panel">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, laudantium.</p>
+
+            </div>
+            <button class="accordion">
+                <div class="accordion-flex">
+                    <img src="/assets/emojiLope.png" alt="">
+
+                    <div class="Content">
+                        <h1>6:35 AM - 11:35 PM</h1>
+                        <h3>Wednesday • 19 hr • CGK - LAX</h3>
+                        <h3>IDR 10,643,007</h3>
+                    </div>
+                </div>
+                <div class="Circle">
+                    <img src="/assets/arrowdown.svg" alt="">
+                </div>
+            </button>
+            <div class="panel">
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, laudantium.</p>
+
+            </div>
+
+
+
+        </div>
+    </div>
+
+
+
+
+
+
+
+
 
 
 
@@ -105,4 +196,5 @@
 
 
 </body>
+
 </html>
