yang penting ada hikmahnya

--- a/public/articlePage.html
+++ b/public/articlePage.html
@@ -10,11 +10,10 @@
     <link rel="stylesheet" href="/style/footer.css">
     <link rel="stylesheet" href="/style/index.css">
     <link rel="stylesheet" href="/style/article.css">
-    <link rel="stylesheet" href="/style/search.css">
+    <link rel="stylesheet" href="/style/articleHome.css">
 </head>
 
 <body>
-    <!-- NAVBAR -->
     <div class="Navbar-Container" id="Navbar-Container">
         <div class="logo">
             <a href="./index.html">
@@ -23,7 +22,7 @@
         </div>
         <div class="Navlink">
             <ul class="NavMenu">
-                <li class="linkItem"><a href="./articlePage.html">Article</a></li>
+                <li class="linkItem"><a href="./detail.html">Article</a></li>
                 <li class="linkItem"><a href="./bookPage.html">Destination</a></li>
                 <li class="linkItem"><a href="#">Feedbacks</a></li>
                 <li class="linkItem off"><a href="#">Search</a></li>
@@ -40,68 +39,38 @@
             <img src="../assets/icon_account.svg" alt="">
         </div>
     </div>
-    <!-- NAVBAR -->
-    <!-- back -->
     <div class="Back">
         <a href="./index.html">Back to Main Page</a>
     </div>
-    <!-- back -->
-    <div class="Search-Container">
-        <div class="Heading">
-            <h1>5 search results found</h1>
-            <p>Hey, great news! We found your search result just for you.</p>
-        </div>
-        <div class="SearchBar">
-            <input type="text" placeholder="Another destination...">
+
+    <div class="PesonaGunung">
+        <div class="Container">
+            <div class="img">
+                <img src="/assets/GunungBromo.png" alt="">
+            </div>
+
+            <div class="Content">
+                <h1>Pesona Gunung Bromo</h1>
+                <p>Keindahan Gunung Bromo tidak mudah untuk saya tuliskan dengan kata-kata. Karena mata saya saja sampai
+                    tak berkedip melihat pesonanya. Sangat indah! Sekilas seperti lukisan yang biasa saya temui...</p>
+                <p>by Ikhsan Assidiqie</p>
+            </div>
         </div>
     </div>
 
 
-
-
-    <div class="Dropdown-Container">
-        <div class="Search-Dropdown">
-            <button class="accordion">
-                <div class="accordion-flex">
-                    <img src="/assets/emojiLope.png" alt="">
-
-                    <div class="Content">
-                        <h1>1:30 PM - 10:10 AM</h1>
-                        <h3>Thursday • 29 hr 40 min • LAX - DPS</h3>
-                        <h3>17,393,955</h3>
-                    </div>
-                </div>
-                <div class="Circle">
-                    <img src="/assets/arrowdown.svg" alt="">
-                </div>
-            </button>
-            <div class="panel">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, laudantium.</p>
-
-            </div>
-            <button class="accordion">
-                <div class="accordion-flex">
-                    <img src="/assets/emojiLope.png" alt="">
-
-                    <div class="Content">
-                        <h1>6:35 AM - 11:35 PM</h1>
-                        <h3>Wednesday • 19 hr • CGK - LAX</h3>
-                        <h3>IDR 10,643,007</h3>
-                    </div>
-                </div>
-                <div class="Circle">
-                    <img src="/assets/arrowdown.svg" alt="">
-                </div>
-            </button>
-            <div class="panel">
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Qui, laudantium.</p>
-
-            </div>
+    
 
 
 
-        </div>
-    </div>
+
+
+
+
+
+
+
+
 
 
 
@@ -164,19 +133,7 @@
         </div>
     </div>
 
-
-
-
-
-
-
-
-
-
     <script src="/public/script.js"></script>
-
-
-
 </body>
 
 </html>
