--- a/public/articlePage.html
+++ b/public/articlePage.html
@@ -58,8 +58,22 @@
         </div>
     </div>
 
-
-    
+    <h2>Recently Added Posts</h2>
+    <div class="addedpost-container">
+        
+        <div class="addedpost">
+            <div class="img">
+                <img src="/assets/gwkgambar.png" alt="">
+            </div>
+            <div class="content">
+                <h1>Garuda Kencana Wisnu</h1>
+                <p>Garuda Wisnu Kencana Cultural Park, or GWK, is a tourist destination and attraction located at
+                    Ungasan, Badung on the island of Bali, Indonesia, about 10–15 minutes drive from Ngurah Rai
+                    International Airport.</p>
+                <p>by Dio Irsaputra Siregar</p>
+            </div>
+        </div>
+    </div>
 
 
 
