--- a/public/articlePage.html
+++ b/public/articlePage.html
@@ -63,9 +63,7 @@
     <div class="addedpost-container">
 
         <div class="addedpost">
-            <div class="img">
-                
-            </div>
+            <div class="img">.</div>
             <div class="content">
                 <h1>Garuda Kencana Wisnu</h1>
                 <p>Garuda Wisnu Kencana Cultural Park, or GWK, is a tourist destination and attraction located at
