--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
     </div>
 
     <!-- script -->
-    <script src="./script.js"></script>
+    <script src="public/script.js"></script>
     <!-- script -->
 </body>
 
